<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="#FFF"
    tools:context="com.muritavo.photomemo.AdicionarDescricao"
    android:orientation="vertical">

    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="6"
        android:id="@+id/preVisualizacao"/>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0px">

        <Button
            android:maxLines="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/descartar"
            android:id="@+id/buttonDescartar"
            android:onClick="descartar"
            android:layout_weight="1"
            android:clickable="false" />

        <Button
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/buttonSalvar" />
    </LinearLayout>
    <EditText
        android:textColor="#AAA"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:hint="@string/adicionar_descricao_hint"
        android:id="@+id/campoDescricao"
        android:gravity="center|left"/>

</LinearLayout>
