<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:gravity="center_vertical">
    <ImageView
        android:scaleType="center"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:padding="10dp"
        android:id="@+id/icone"/>
    <TextView
        android:paddingLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textStyle="bold"
        android:id="@+id/titleLabel"
        android:layout_toRightOf="@id/icone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_toRightOf="@id/titleLabel"/>
    <TextView
        android:paddingLeft="3dp"
        android:layout_toRightOf="@id/icone"
        android:id="@+id/dataLabel"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataDeCriacao"
        android:layout_below="@id/titleLabel"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/data"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toRightOf="@id/dataLabel"
        android:layout_below="@id/titulo"/>
    <TextView
        android:paddingLeft="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricaoLabel"
        android:textStyle="bold"
        android:id="@+id/descricaoLabel"
        android:layout_toRightOf="@id/icone"
        android:layout_below="@id/dataLabel"/>
    <TextView
        android:paddingLeft="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descricao"
        android:maxLines="4"
        android:ellipsize="end"
        android:layout_below="@id/descricaoLabel"
        android:layout_toRightOf="@id/icone"/>
</RelativeLayout>